UI: Fix SigningManagerScreen overflows

--- a/frontend/src/screens/signingScreen/SigningManagerScreen.scss
+++ b/frontend/src/screens/signingScreen/SigningManagerScreen.scss
@@ -79,7 +79,7 @@
     min-inline-size: 0;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: pre-wrap;
 }
 
 .lw-signingManagerScreen__chip {
